# featureless_TGB

./: README.md  feature_modes.py  main.py  metrics_utils.py  models.py  plot_results.py  pyproject.toml  run_full_tests_20k.sh  sampling.py  synthetic_features.py
featureless_temporal_benchmark/: __init__.py  api.py
featureless_temporal_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: all_experiments_20k.csv  api_smoke.csv  baseline_results.csv  baseline_results_v2.csv  debug_leakcheck_genre.csv  debug_leakcheck_trade.csv  debug_trade_dyrep.csv  full_tests_20k.csv  full_tests_20k_backup.csv  overnight_sparse_all.csv  recency_node2vec_smoke.csv  sage_smoke.csv  smoke_node_init.csv  smoke_refactor.csv  smoke_results.csv  smoke_snapshot_gae.csv  smoke_subsample.csv  snapshot_node2vec_smoke.csv  synthetic_smoke.csv
slurm/: recovery_matrix.sbatch
tests/: test_masking_and_labels.py  test_synthetic_features.py
